Fix style and alignment of buttons on idmap page

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -629,11 +629,6 @@ iscsi .mat-ink-bar {
   opacity: 0;
 }
 
-// .mat-button.mat-primary {
-//   @include variable(color, --primary, $primary, !important);
-// }
-
-
-// .mat-button.mat-primary:hover {
-//   @include variable(background-color, --primary, $primary, !important);
-// }
+#idmap-actions {
+  margin-left: 0;
+}
